--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             window.ga.q = [];
             };
            
-            window.ga.1 = (new Date()).getTime();
+            window.ga.l = (new Date()).getTime();
             
             var script =  document.createElement('script'),
             script.src = '//www.google-analytics.com/analytics.js';
