--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
                 'experiment2_button1': 
                     '<input type="button" value="Yes!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1cool\'); alert(\'Cool!\');">'
                 'experiment2_button2': 
-                   '<input type="button" value="Yes!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1notcool\'); alert(\'Not Cool.\');">'
+                   '<input type="button" value="No!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1notcool\'); alert(\'Not Cool.\');">'
 
             },
             {
                 name: 'test2',
                 'experiment2_text': 'Do not click!!'
                 'experiment2_button1': 
-                    '<input type="button" value="Yes!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'tnotcool\'); alert(\'Not Cool.\');">'
+                    '<input type="button" value="Ok!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'tnotcool\'); alert(\'Not Cool.\');">'
                 'experiment2_button2': 
-                   '<input type="button" value="Yes!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1cool\'); alert(\'Cool!\');">'
+                   '<input type="button" value="...:click:" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1cool\'); alert(\'Cool!\');">'
             }
          ]
      });
