--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             },
             {
                 name: 'test2',
-                'experiment2_text': 'Do not click!!'
+                'experiment2_text': 'Do not click!!',
                 'experiment2_button1': 
                     '<input type="button" value="Ok!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'tnotcool\'); alert(\'Not Cool.\');">',
                 'experiment2_button2': 
