--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 name: 'test2',
                 'experiment2_text': 'Do not click!!',
                 'experiment2_button1': 
-                    '<input type="button" value="Ok!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'tnotcool\'); alert(\'Not Cool.\');">',
+                    '<input type="button" value="Ok!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1notcool\'); alert(\'Not Cool.\');">',
                 'experiment2_button2': 
-                   '<input type="button" value="...:click:" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1cool\'); alert(\'Cool!\');">'
+                   '<input type="button" value="...:click:" onclick="ga(\'send\', \'event\', \'buttonclick\', \'t1notcool\'); alert(\'Not Cool.\');">'
             }
          ]
      });
